--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="options">
 				<span class="no-overflow">
 					<span class="lengthen ui-inputs">
-						<button class="url useicons"><img src="css/link.png"></button>
+						<button class="url useicons"><img src="img/link.png"></button>
 						<input class="url-input" type="text" placeholder="Type or Paste URL here"/>
 					</span>
 				</span>
